--- a/1.node/1.node.md
+++ b/1.node/1.node.md
@@ -2,3 +2,7 @@
 * Node 是一个让js可以运行在浏览器之外的服务端平台。
 * 它实现了核心没有或者不完善的一些功能,如:文件系统、
 模块、包、操作系统API、网络通信等。
+* 它摒弃了传统平台依赖多线程来实现高并发的设计思路,
+而采用单线程、异步I/O、事件驱动的程序设计模型。
+* Node 使用了Google ChromeV8引擎。V8目前是世界
+上最快的JavaScript引擎。
