--- a/1.node/1.node.md
+++ b/1.node/1.node.md
@@ -1,4 +1,4 @@
-#Node是什么?
+#Node是什么
 * Node 是一个让js可以运行在浏览器之外的服务端平台。
 * 它实现了核心没有或者不完善的一些功能,如:文件系统、
 模块、包、操作系统API、网络通信等。
@@ -6,3 +6,63 @@
 而采用单线程、异步I/O、事件驱动的程序设计模型。
 * Node 使用了Google ChromeV8引擎。V8目前是世界
 上最快的JavaScript引擎。
+
+#Node的优点
+* Node基于JavaScript语言。
+* 统一类库统一编码,如果你写了一个功能就可以
+前后端通用这样会很方便。
+* Node选择了最快的Google ChromeV8引擎。
+
+#什么是回调
+* 异步编程的基本方法,需要异步处理的时候一般采用
+后续传递的方式。
+* 将后续逻辑作为函数的参数,传给起始函数的参数。
+```
+function say(callback){
+    callback();
+}
+
+function print(){
+    setTimeout(function(){
+        console.log("hello world");
+    },1000);
+}
+
+say(print);
+```
+#同步和异步
+* 同步是指发起调用之后主线程只能挂起,调用者主动
+等待这个调用的结果。
+* 异步是指发起调用之后主线程可以做别的事情,被调用
+者通过通知来告知调用者结果。
+
+#阻塞和非阻塞
+* 针对内核来说,向内核发起请求时不会阻塞主线程的执行。
+* 非阻塞是实现异步的前提条件。
+
+#什么是I/O
+* Input(输入)从文件系统中读取文件。
+* Output(输出)向文件系统写入文件。
+
+#什么是单线程/多线程
+* 单线程指程序按顺序执行,前面流程执行完毕之后,后面
+的流程才能执行到。
+* 多线程指同时可以执行多个任务,比如一边看电视,一边
+睡觉,通过系统线程上下文切换来弥补同步I/O调用时的
+时间开销。
+* Node单线程指的是主线程是单线程的,所有阻塞的部分
+交给一个线程池处理,然后这个主线程通过一个队列跟
+线程池协作。
+
+#什么是事件
+* 是指发生了某种事情,这件事情会触发其他动作的发生
+
+#什么是基于事件驱动的回调函数
+* 不是立即执行,而是等某个事件发生之后才会执行的函数
+就叫基于事件驱动的函数。
+
+#什么是事件循环
+* 管理异步动作、定时器和回调函数的机制叫做事件环。
+* 异步的时候就会压入到这个队列,然后不停的读取事件
+,事件发生之后会把对应的回调函数加入队列。
+* 队列按加入的顺序依次执行,由普通函数和回调函数组成。
